[gd_scene load_steps=2 format=3 uid="uid://dvxp5wx74wnn"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_xoq5w"]

[node name="Menu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xoq5w")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="CenterContainer/Start"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.909804, 0, 0, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CenterContainer/Start"]
layout_mode = 2
text = "Enter your username below."
horizontal_alignment = 1

[node name="Name" type="LineEdit" parent="CenterContainer/Start"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
placeholder_text = "username"
alignment = 1

[node name="Host" type="Button" parent="CenterContainer/Start"]
layout_mode = 2
text = "Create Server"

[node name="Join" type="Button" parent="CenterContainer/Start"]
layout_mode = 2
text = "Join Server"

[node name="Label" type="Label" parent="CenterContainer/Start"]
layout_mode = 2
text = "Enter server ip adress or port on wich to create one."
horizontal_alignment = 1

[node name="PortOrAdress" type="LineEdit" parent="CenterContainer/Start"]
layout_mode = 2
text = "127.0.0.1"
alignment = 1

[node name="WaitingRoom" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="GameOver" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOver/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Cat won!"
horizontal_alignment = 1

[node name="StartAgainButton" type="Button" parent="GameOver/VBoxContainer"]
layout_mode = 2
text = "Play Again!"

[node name="QuitButton" type="Button" parent="GameOver/VBoxContainer"]
layout_mode = 2
text = "Quit  :("

[connection signal="pressed" from="CenterContainer/Start/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CenterContainer/Start/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/StartAgainButton" to="." method="_on_start_again_button_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
